--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
  <head>
     <meta charset="UTF-8">
-    <title>😎 MAGESH'S SITE</title>
+    <title>Magesh's Personal site</title>
   </head>
   <body>
     <table cellspacing="20">
